src/main/webapp/app/programming/manage/grading/tasks/programming-exercise-grading-tasks-table/programming-exercise-grading-tasks-table.scss
.task {
    &__body {
        display: flex;
        flex-direction: column;
        margin-left: 2rem;
    }

    &__field {
        display: flex;
        align-items: center;
        overflow-wrap: anywhere;
    }

    &__row {
        display: flex;
        gap: 0.5rem;
        padding: 1rem;
        width: 100%;

        &__index {
            display: flex;
            align-items: center;
            width: 3rem;
        }

        &__cell {
            flex: 1 1 0;
            display: flex;
            align-items: center;

            &--small {
                width: 80px;
                flex: initial;
            }
        }
    }

    &__collapse {
        color: var(--bs-card-color);
        background: none;
        border: none;
        width: 2rem;
    }
}

.sort {
    &__button {
        border: none;
        background: none;
        color: var(--bs-card-color);
    }
}

/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

/* Firefox */
input[type='number'] {
    -moz-appearance: textfield;
}

